daylight-equation/fixtures/daylight-v06-m1/vectors/negative/N6_wrong_enum_value/h0.hex
6523721c3c6d1fdf48c8423d9fb7fd8246eff372cd0157e2b8c69e68861feb9f05db5993e8ea30404968cd972dff9c2f188d57f6f41c241bf7c30693d396269c
